--- a/more.html
+++ b/more.html
@@ -36,6 +36,8 @@
 	    <ul class="slideshow">
           <li class="show"><img width="940" height="250" src="images/home_1.jpg" alt="&quot;Sweet home&quot;" /></li>
           <li><img width="940" height="250" src="images/home_2.jpg" alt="&quot;Biking&quot;" /></li>
+          <li><img width="940" height="250" src="images/home_3.jpg" alt="&quot;Hualien coast&quot;" /></li>
+          <li><img width="940" height="250" src="images/home_4.jpg" alt="&quot;A house at Shuangsi&quot;" /></li>
         </ul> 
 	  </div><!--close slideshow-->  	
 	</div><!--close slideshow_container-->  	
