add Linkedin in more.html

--- a/more.html
+++ b/more.html
@@ -54,6 +54,9 @@
             <li>
               <a href="http://jonathan2251.github.io/web/resume.html">Resume</a>
             </li>
+            <li>
+              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874">Linkedin</a>
+            </li>
             <p></p>
             <p></p>
             <h2>email:</h2>
