--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Free HTML5 Templates</title>
+  <title>Home</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -35,9 +35,8 @@
 	  <div class="slideshow">
 	    <ul class="slideshow">
           <li class="show"><img width="940" height="250" src="images/home_1.jpg" alt="&quot;Sweet home&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_2.jpg" alt="&quot;Biking&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_3.jpg" alt="&quot;Hualien coast&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_4.jpg" alt="&quot;A house at Shuangsi&quot;" /></li>
+          <li><img width="940" height="250" src="images/home_2.jpg" alt="&quot;happy&quot;" /></li>
+          <li><img width="940" height="250" src="images/home_3.jpg" alt="&quot;Sweet smile&quot;" /></li>
         </ul> 
 	  </div><!--close slideshow-->  	
 	</div><!--close slideshow_container-->   
@@ -59,7 +58,7 @@
     </footer>
 	
   </div><!--close main-->
-  
+
   <!-- javascript at the bottom for fast page loading -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/image_slide.js"></script>
