--- a/more.html
+++ b/more.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Free HTML5 Templates</title>
+  <title>More</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -34,10 +34,9 @@
     <div id="slideshow_container">  
 	  <div class="slideshow">
 	    <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="images/home_1.jpg" alt="&quot;Sweet home&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_2.jpg" alt="&quot;Biking&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_3.jpg" alt="&quot;Hualien coast&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_4.jpg" alt="&quot;A house at Shuangsi&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="images/more_1.jpg" alt="&quot;Biking&quot;" /></li>
+          <li><img width="940" height="250" src="images/more_2.jpg" alt="&quot;Hualien coast&quot;" /></li>
+          <li><img width="940" height="250" src="images/more_3.jpg" alt="&quot;A house at Shuangsi&quot;" /></li>
         </ul> 
 	  </div><!--close slideshow-->  	
 	</div><!--close slideshow_container-->  	
