--- a/mywork.html
+++ b/mywork.html
@@ -26,6 +26,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="current"><a href="mywork.html">My Work</a></li>
             <li><a href="more.html">More</a></li>
+            <li><a href="personal.html">Personal</a></li>
           </ul>
         </div><!--close menubar-->	
       </nav>
