Use css to control layout instead of javascript

--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/style2.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
 </head>
@@ -32,9 +32,9 @@
       </nav>
     </header>
 	
-    <div id="slideshow_container2">  
-	  <div class="slideshow2">
-	    <ul class="slideshow2">
+    <div id="slideshow_container">  
+	  <div class="slideshow">
+	    <ul class="slideshow">
           <li class="show"><img class="resize" src="images/personal/2007-I can bike 1.jpg" alt="&quot;I can bike&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-I can bike 2.jpg" alt="&quot;I can bike&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-I can bike 3.jpg" alt="&quot;I can bike&quot;" /></li>
@@ -135,7 +135,7 @@
     
   <!-- javascript at the bottom for fast page loading -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide2.js"></script>	
+  <script type="text/javascript" src="js/image_slide.js"></script>	
   
 </body>
 </html>
