--- a/personal.html
+++ b/personal.html
@@ -156,6 +156,44 @@
           <li><img class="resize" src="images/personal/2015-SplendidCoastline4.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-SplendidCoastline5.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-SplendidCoastline6.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToBadu1.jpg" alt="&quot;Biking at Badu station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToBadu2.jpg" alt="&quot;Breakfast restaurant owner at Badu station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToBadu3.jpg" alt="&quot;Breakfast restaurant at Badu station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToBadu4.jpg" alt="&quot;Breakfast restaurant at Badu station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToFulong1.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToFulong2.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToFulong3.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToFulong4.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien1.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien2.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien3.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien4.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien5.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien6.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien7.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToHualien8.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli1.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli2.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli3.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli4.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi1.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi2.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi3.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi4.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi5.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail-Tunnel.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail1.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail2.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail3.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-GrayRock1.jpg.jpg" alt="&quot;Biking near gray rock of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot1.jpg.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot2.jpg.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain1.jpg" alt="&quot;Train to Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain2.jpg" alt="&quot;Train to Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-River1.jpg" alt="&quot;River at Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-Station.jpg" alt="&quot;Taroko Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-SuspensionBridge1.jpg" alt="&quot;Suspension bridge at Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-SuspensionBridge2.jpg" alt="&quot;Suspension bridge at Taroko&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-北埔柿乾.jpg" alt="&quot;Dried persimmon&quot;" /></li>
           <li><img class="resize" src="images/personal/20100830-九陰排骨爪.jpg" alt="&quot;九陰排骨爪 Nine Yin Bone Claw&quot;" /></li>
           <li><img class="resize" src="images/personal/20100830_廈門金門_meal1.jpg" alt="&quot;Having meal at restaurant outside Animal park&quot;" /></li>
