--- a/personal.html
+++ b/personal.html
@@ -58,6 +58,8 @@
           <li><img class="resize" src="images/personal/2005-Baby22.jpg" alt="&quot;Baby&quot;" /></li>
           <li><img class="resize" src="images/personal/2005-Baby23.jpg" alt="&quot;Baby&quot;" /></li>
           <li><img class="resize" src="images/personal/2005-Baby24.jpg" alt="&quot;Baby&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Beetle1.JPG" alt="&quot;2007-Beetle&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Beetle2.JPG" alt="&quot;2007-Beetle&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-I can bike 1.jpg" alt="&quot;I can bike&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-I can bike 2.jpg" alt="&quot;I can bike&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-I can bike 3.jpg" alt="&quot;I can bike&quot;" /></li>
@@ -76,7 +78,7 @@
           <li><img class="resize" src="images/personal/2007-touch horse.jpg" alt="&quot;Touch horse&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-電動三輪車1.jpg" alt="&quot;I can ride tricycle&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-電動三輪車2.jpg" alt="&quot;I can ride tricycle&quot;" /></li>
-          <li><img class="resize" src="images/personal/2010-Ride Panda.jpg" alt="&quot;Ride panda&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Ride Panda.jpg" alt="&quot;Ride panda&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-冠亨腳養.jpg" alt="&quot;冠亨腳養 Quian Hen's foot itch&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-珠算檢定1.jpg" alt="&quot;珠算檢定 Exam of chinese calculator skills&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-珠算檢定2.jpg" alt="&quot;珠算檢定 Exam of chinese calculator skills&quot&quot;" /></li>
@@ -110,32 +112,32 @@
           <li><img class="resize" src="images/personal/2012-放天燈2.jpg" alt="&quot;平溪放天燈 Flying lantern at Pinxi&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-放天燈3.jpg" alt="&quot;平溪放天燈 Flying lantern at Pinxi&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-放天燈4.jpg" alt="&quot;平溪放天燈 Flying lantern at Pinxi&quot;" /></li>
-          <li><img class="resize" src="images/personal/2013-Ride cow 1.png" alt="&quot;Ride cow&quot;" /></li>
-          <li><img class="resize" src="images/personal/2013-Ride cow 2.png" alt="&quot;Ride cow&quot;" /></li>
-          <li><img class="resize" src="images/personal/2013-Ride cow 3.png" alt="&quot;Ride cow&quot;" /></li>
-          <li><img class="resize" src="images/personal/2013-Ride cow 4.png" alt="&quot;Ride cow&quot;" /></li>
-          <li><img class="resize" src="images/personal/2013-Ride cow 5.png" alt="&quot;Ride cow&quot;" /></li>
-          <li><img class="resize" src="images/personal/2013-Ride cow 6.png" alt="&quot;Ride cow&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 1.png" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 2.png" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 3.png" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 4.png" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli1.png" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli2.png" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli3.png" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli4.png" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli5.png" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli6.png" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-WriteDownOurWords1.png" alt="&quot;Write down our words&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-WriteDownOurWords2.png" alt="&quot;Write down our words&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-製作彈珠台1.png" alt="&quot;製作彈珠台 Building marble board game&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-製作彈珠台2.png" alt="&quot;製作彈珠台 Building marble board game&quot;" /></li>
-          <li><img class="resize" src="images/personal/2014-製作彈珠台3.png" alt="&quot;製作彈珠台 Building marble board game&quot;" /></li>
-          <li><img class="resize" src="images/personal/2015-Biking at Xinglong bridge.png" alt="&quot;Biking at Xinglong bridge&quot;" /></li>
-          <li><img class="resize" src="images/personal/2015-Biking at 竹東.png" alt="&quot;2015-Biking at 竹東&quot;" /></li>
-          <li><img class="resize" src="images/personal/2015-Birthday1.png" alt="&quot;2015 Birthday at home&quot;" /></li>
-          <li><img class="resize" src="images/personal/2015-Birthday2.png" alt="&quot;2015 Birthday at home&quot;" /></li>
-          <li><img class="resize" src="images/personal/2015-Birthday3.png" alt="&quot;2015 Birthday at home&quot;" /></li>
+          <li><img class="resize" src="images/personal/2013-Ride cow 1.jpg" alt="&quot;Ride cow&quot;" /></li>
+          <li><img class="resize" src="images/personal/2013-Ride cow 2.jpg" alt="&quot;Ride cow&quot;" /></li>
+          <li><img class="resize" src="images/personal/2013-Ride cow 3.jpg" alt="&quot;Ride cow&quot;" /></li>
+          <li><img class="resize" src="images/personal/2013-Ride cow 4.jpg" alt="&quot;Ride cow&quot;" /></li>
+          <li><img class="resize" src="images/personal/2013-Ride cow 5.jpg" alt="&quot;Ride cow&quot;" /></li>
+          <li><img class="resize" src="images/personal/2013-Ride cow 6.jpg" alt="&quot;Ride cow&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 1.jpg" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 2.jpg" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 3.jpg" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 4.jpg" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli1.jpg" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli2.jpg" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli3.jpg" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli4.jpg" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli5.jpg" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-CandleFactoryAtMiaoli6.jpg" alt="&quot;苗栗蠟燭觀光工廠 Candle tourism factory at Miaoli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-WriteDownOurWords1.jpg" alt="&quot;Write down our words&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-WriteDownOurWords2.jpg" alt="&quot;Write down our words&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-製作彈珠台1.jpg" alt="&quot;製作彈珠台 Building marble board game&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-製作彈珠台2.jpg" alt="&quot;製作彈珠台 Building marble board game&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-製作彈珠台3.jpg" alt="&quot;製作彈珠台 Building marble board game&quot;" /></li>
+          <li><img class="resize" src="images/personal/2015-Biking at Xinglong bridge.jpg" alt="&quot;Biking at Xinglong bridge&quot;" /></li>
+          <li><img class="resize" src="images/personal/2015-Biking at 竹東.jpg" alt="&quot;2015-Biking at 竹東&quot;" /></li>
+          <li><img class="resize" src="images/personal/2015-Birthday1.jpg" alt="&quot;2015 Birthday at home&quot;" /></li>
+          <li><img class="resize" src="images/personal/2015-Birthday2.jpg" alt="&quot;2015 Birthday at home&quot;" /></li>
+          <li><img class="resize" src="images/personal/2015-Birthday3.jpg" alt="&quot;2015 Birthday at home&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-canal1.jpg" alt="&quot;2015-Biking at canal of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-canal2.jpg" alt="&quot;2015-Biking at canal of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-MangrovPark1.jpg" alt="&quot;Biking at MangrovPark of Hsinchu 17 km Coastline&quot;" /></li>
@@ -149,7 +151,7 @@
           <li><img class="resize" src="images/personal/2015-MangrovPark9.jpg" alt="&quot;Biking at MangrovPark of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-MangrovPark10.jpg" alt="&quot;Biking at MangrovPark of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-Nanchung.jpg" alt="&quot;Nanchung&quot;" /></li>
-          <li><img class="resize" src="images/personal/2015-Sit at 7elven after biking.png" alt="&quot;Sit at 7elven after biking&quot;" /></li>
+          <li><img class="resize" src="images/personal/2015-Sit at 7elven after biking.jpg" alt="&quot;Sit at 7elven after biking&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-SplendidCoastline1.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-SplendidCoastline2.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-SplendidCoastline3.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
@@ -185,9 +187,9 @@
           <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail1.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail2.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail3.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-GrayRock1.jpg.jpg" alt="&quot;Biking near gray rock of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot1.jpg.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot2.jpg.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-GrayRock1.jpg" alt="&quot;Biking near gray rock of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot1.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot2.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain1.jpg" alt="&quot;Train to Taroko&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain2.jpg" alt="&quot;Train to Taroko&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToTaroko-River1.jpg" alt="&quot;River at Taroko&quot;" /></li>
