--- a/personal.html
+++ b/personal.html
@@ -91,6 +91,70 @@
           <li><img class="resize" src="images/personal/2010-蘭陽博物館2.jpg" alt="&quot;蘭陽博物館 Lanyang Museum http://www.lym.gov.tw&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-蘭陽博物館3.jpg" alt="&quot;蘭陽博物館 Lanyang Museum http://www.lym.gov.tw&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-金門舊戰車.jpg" alt="&quot;金門舊戰車（坦克車） A old tank at Kinmen&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-21世紀烤雞1.JPG" alt="&quot;2010-21世紀烤雞 21 Plus restaurant&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-21世紀烤雞2.JPG" alt="&quot;2010-21世紀烤雞 21 Plus restaurant&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-FriendWedding.JPG" alt="&quot;2010-A relative's wedding&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-ㄅㄆㄇㄈ.JPG" alt="&quot;2010-ㄅㄆㄇㄈ&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung1.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung2.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung3.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung4.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung5.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung6.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung7.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung8.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung9.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Keelung10.JPG" alt="&quot;2010-Keelung&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-MartialArt1.JPG" alt="&quot;2010-Martial art&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-MartialArt2.JPG" alt="&quot;2010-Martial art&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-MartialArt3.JPG" alt="&quot;2010-Martial art&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Reading1.JPG" alt="&quot;2010-Reading&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Reading2.JPG" alt="&quot;2010-Reading&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Reading3.JPG" alt="&quot;2010-Reading&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-Reading4.JPG" alt="&quot;2010-Reading&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-中壢BBQ1.JPG" alt="&quot;2010-中壢 BBQ at Zhongli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-中壢BBQ2.JPG" alt="&quot;2010-中壢 BBQ at Zhongli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-中壢BBQ3.JPG" alt="&quot;2010-中壢 BBQ at Zhongli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-中壢BBQ4.JPG" alt="&quot;2010-中壢 BBQ at Zhongli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-中壢BBQ5.JPG" alt="&quot;2010-中壢 BBQ at Zhongli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-中壢BBQ6.JPG" alt="&quot;2010-中壢 BBQ at Zhongli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-十分寮1.JPG" alt="&quot;2010-十分寮 Shifen&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-大安公園1.JPG" alt="&quot;2010-大安公園 Daan park&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-大安公園2.JPG" alt="&quot;2010-大安公園 Daan park&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-大安公園3.JPG" alt="&quot;2010-大安公園 Daan park&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-大安公園4.JPG" alt="&quot;2010-大安公園 Daan park&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-大安公園5.JPG" alt="&quot;2010-大安公園 Daan park&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-大安公園6.JPG" alt="&quot;2010-大安公園 Daan park&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-大安公園7.JPG" alt="&quot;2010-大安公園 Daan park&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館1.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館2.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館3.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館4.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館5.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館6.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館7.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館8.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館9.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-平溪台灣煤礦博物館10.JPG" alt="&quot;2010-平溪台灣煤礦博物館 Taiwan Coal Mine Museum at Pingxi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道1.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道2.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道3.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道4.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道5.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道6.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道7.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道8.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-福隆舊草嶺隧道自行車道9.JPG" alt="&quot;2010-福隆舊草嶺隧道自行車道 Fulong Tunnel Bikeway&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋1.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋2.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋3.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋4.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋5.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋6.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋7.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋8.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋9.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2010-青埔房屋10.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-頭城P8280309.jpg" alt="&quot;頭城 Touchen&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-igloo 1.jpg" alt="&quot;igloo&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-igloo 2.jpg" alt="&quot;igloo&quot;" /></li>
