personal.html and css

--- a/personal.html
+++ b/personal.html
@@ -79,6 +79,10 @@
           <li><img class="resize" src="images/personal/2007-電動三輪車1.jpg" alt="&quot;I can ride tricycle&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-電動三輪車2.jpg" alt="&quot;I can ride tricycle&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-Ride Panda.jpg" alt="&quot;Ride panda&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Sister-in-law's daughter.jpg" alt="&quot;2007-Sister-in-law's daughter&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Taipei street 1.jpg" alt="&quot;2007-Taipei street 1&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Taipei street 2.jpg" alt="&quot;2007-Taipei street 1&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Taipei street 3.jpg" alt="&quot;2007-Taipei street 1&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-冠亨腳養.jpg" alt="&quot;冠亨腳養 Quian Hen's foot itch&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-珠算檢定1.jpg" alt="&quot;珠算檢定 Exam of chinese calculator skills&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-珠算檢定2.jpg" alt="&quot;珠算檢定 Exam of chinese calculator skills&quot&quot;" /></li>
