Show 1 picture only when url is not file:

--- a/personal.html
+++ b/personal.html
@@ -35,7 +35,8 @@
     <div id="slideshow_container">  
 	  <div class="slideshow">
 	    <ul class="slideshow">
-          <li class="show"><img class="resize" src="images/personal/2005-Baby1.jpg" alt="&quot;Baby&quot;" /></li>
+          <li class="show"><img class="resize" src="images/personal/2007-I can bike 1.jpg" alt="&quot;I can bike&quot;" /></li>
+          <li><img class="resize" src="images/personal/2005-Baby1.jpg" alt="&quot;Baby&quot;" /></li>
           <li><img class="resize" src="images/personal/2005-Baby2.jpg" alt="&quot;Baby&quot;" /></li>
           <li><img class="resize" src="images/personal/2005-Baby3.jpg" alt="&quot;Baby&quot;" /></li>
           <li><img class="resize" src="images/personal/2005-Baby4.jpg" alt="&quot;Baby&quot;" /></li>
@@ -80,9 +81,9 @@
           <li><img class="resize" src="images/personal/2007-電動三輪車2.jpg" alt="&quot;I can ride tricycle&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-Ride Panda.jpg" alt="&quot;Ride panda&quot;" /></li>
           <li><img class="resize" src="images/personal/2007-Sister-in-law's daughter.jpg" alt="&quot;2007-Sister-in-law's daughter&quot;" /></li>
-          <li><img class="resize" src="images/personal/2007-Taipei street 1.jpg" alt="&quot;2007-Taipei street 1&quot;" /></li>
-          <li><img class="resize" src="images/personal/2007-Taipei street 2.jpg" alt="&quot;2007-Taipei street 1&quot;" /></li>
-          <li><img class="resize" src="images/personal/2007-Taipei street 3.jpg" alt="&quot;2007-Taipei street 1&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Taipei street 1.jpg" alt="&quot;2007-Taipei street&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Taipei street 2.jpg" alt="&quot;2007-Taipei street&quot;" /></li>
+          <li><img class="resize" src="images/personal/2007-Taipei street 3.jpg" alt="&quot;2007-Taipei street&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-冠亨腳養.jpg" alt="&quot;冠亨腳養 Quian Hen's foot itch&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-珠算檢定1.jpg" alt="&quot;珠算檢定 Exam of chinese calculator skills&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-珠算檢定2.jpg" alt="&quot;珠算檢定 Exam of chinese calculator skills&quot&quot;" /></li>
