Change order of pictures showing

--- a/personal.html
+++ b/personal.html
@@ -161,6 +161,17 @@
           <li><img class="resize" src="images/personal/2010-青埔房屋9.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-青埔房屋10.JPG" alt="&quot;2010-青埔房屋 House at THSR Taoyuan Station&quot;" /></li>
           <li><img class="resize" src="images/personal/2010-頭城P8280309.jpg" alt="&quot;頭城 Touchen&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830-九陰排骨爪.jpg" alt="&quot;九陰排骨爪 Nine Yin Bone Claw&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_meal1.jpg" alt="&quot;Having meal at restaurant outside Animal park&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_meal2.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_meal3.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_meal4.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_meal5.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_meal6.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_street1.jpg" alt="&quot;crowded street at 廈門 Xiamen&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_學蠟筆小新1.jpg" alt="&quot;學蠟筆小新 mimic of Crayon Shinchan (a cartoon's character)&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830_廈門金門_學蠟筆小新2.jpg" alt="&quot;學蠟筆小新 mimic of Crayon Shinchan (a cartoon's character)&quot;" /></li>
+          <li><img class="resize" src="images/personal/20100830-戎祥十八掌.jpg" alt="&quot;戎祥十八掌&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-igloo 1.jpg" alt="&quot;igloo&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-igloo 2.jpg" alt="&quot;igloo&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-igloo 3.jpg" alt="&quot;igloo&quot;" /></li>
@@ -187,6 +198,9 @@
           <li><img class="resize" src="images/personal/2013-Ride cow 4.jpg" alt="&quot;Ride cow&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 5.jpg" alt="&quot;Ride cow&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 6.jpg" alt="&quot;Ride cow&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-I can cook instant noodle 1.jpg" alt="&quot;I can cook instant noodle&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-I can cook instant noodle 2.jpg" alt="&quot;I can cook instant noodle&quot;" /></li>
+          <li><img class="resize" src="images/personal/2014-I can cook instant noodle 3.jpg" alt="&quot;I can cook instant noodle&quot;" /></li>
           <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 1.jpg" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
           <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 2.jpg" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
           <li><img class="resize" src="images/personal/2014-Boat tours at Tamsui, Marvell event 3.jpg" alt="&quot;Boat tours at Tamsui, Marvell event&quot;" /></li>
@@ -209,6 +223,7 @@
           <li><img class="resize" src="images/personal/2015-Birthday3.jpg" alt="&quot;2015 Birthday at home&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-canal1.jpg" alt="&quot;2015-Biking at canal of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-canal2.jpg" alt="&quot;2015-Biking at canal of Hsinchu 17 km Coastline&quot;" /></li>
+          <li><img class="resize" src="images/personal/2015-北埔柿乾.jpg" alt="&quot;Dried persimmon&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-MangrovPark1.jpg" alt="&quot;Biking at MangrovPark of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-MangrovPark2.jpg" alt="&quot;Biking at MangrovPark of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-MangrovPark3.jpg" alt="&quot;Biking at MangrovPark of Hsinchu 17 km Coastline&quot;" /></li>
@@ -227,14 +242,36 @@
           <li><img class="resize" src="images/personal/2015-SplendidCoastline4.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-SplendidCoastline5.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
           <li><img class="resize" src="images/personal/2015-SplendidCoastline6.jpg" alt="&quot;Biking at Splendid Coastline of Hsinchu 17 km Coastline&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli1.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli2.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli3.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToMaioli4.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToBadu1.jpg" alt="&quot;Biking at Badu station&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToBadu2.jpg" alt="&quot;Breakfast restaurant owner at Badu station&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToBadu3.jpg" alt="&quot;Breakfast restaurant at Badu station&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToBadu4.jpg" alt="&quot;Breakfast restaurant at Badu station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi1.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi2.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi3.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi4.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToShuangsi5.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToFulong1.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToFulong2.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToFulong3.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToFulong4.jpg" alt="&quot;Biking at Fulong&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain1.jpg" alt="&quot;Train to Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain2.jpg" alt="&quot;Train to Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-Station.jpg" alt="&quot;Taroko Station&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot1.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot2.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-River1.jpg" alt="&quot;River at Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-GrayRock1.jpg" alt="&quot;Biking near gray rock of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-SuspensionBridge1.jpg" alt="&quot;Suspension bridge at Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-SuspensionBridge2.jpg" alt="&quot;Suspension bridge at Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail-Tunnel.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail1.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail2.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
+          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail3.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToHualien1.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToHualien2.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToHualien3.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
@@ -243,40 +280,6 @@
           <li><img class="resize" src="images/personal/2016-BikeToHualien6.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToHualien7.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
           <li><img class="resize" src="images/personal/2016-BikeToHualien8.jpg" alt="&quot;Biking at Hualien&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToMaioli1.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToMaioli2.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToMaioli3.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToMaioli4.jpg" alt="&quot;Biking at Maioli&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToShuangsi1.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToShuangsi2.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToShuangsi3.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToShuangsi4.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToShuangsi5.jpg" alt="&quot;Biking at Shuangsi&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail-Tunnel.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail1.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail2.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-BaiYangTrail3.jpg" alt="&quot;Biking at Baiyang Trail of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-GrayRock1.jpg" alt="&quot;Biking near gray rock of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot1.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-MountainFoot2.jpg" alt="&quot;Mountain foot of Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain1.jpg" alt="&quot;Train to Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-OnTrain2.jpg" alt="&quot;Train to Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-River1.jpg" alt="&quot;River at Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-Station.jpg" alt="&quot;Taroko Station&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-SuspensionBridge1.jpg" alt="&quot;Suspension bridge at Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2016-BikeToTaroko-SuspensionBridge2.jpg" alt="&quot;Suspension bridge at Taroko&quot;" /></li>
-          <li><img class="resize" src="images/personal/2015-北埔柿乾.jpg" alt="&quot;Dried persimmon&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830-九陰排骨爪.jpg" alt="&quot;九陰排骨爪 Nine Yin Bone Claw&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_meal1.jpg" alt="&quot;Having meal at restaurant outside Animal park&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_meal2.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_meal3.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_meal4.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_meal5.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_meal6.jpg" alt="&quot;Dinner at restaurant of Hongkong food at Ximenting&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_street1.jpg" alt="&quot;crowded street at 廈門 Xiamen&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_學蠟筆小新1.jpg" alt="&quot;學蠟筆小新 mimic of Crayon Shinchan (a cartoon's character)&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830_廈門金門_學蠟筆小新2.jpg" alt="&quot;學蠟筆小新 mimic of Crayon Shinchan (a cartoon's character)&quot;" /></li>
-          <li><img class="resize" src="images/personal/20100830-戎祥十八掌.jpg" alt="&quot;戎祥十八掌&quot;" /></li>
         </ul> 
 	  </div><!--close slideshow-->  	
 	</div><!--close slideshow_container-->  	
