--- a/index.html
+++ b/index.html
@@ -22,40 +22,47 @@
       </div><!--close strapline-->	  
 	  <nav>
 	    <div id="menubar">
-          <ul id="nav">
-            <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="mywork.html">My Work</a></li>
-            <li><a href="more.html">More</a></li>
-            <li><a href="personal.html">Personal</a></li>
-          </ul>
-        </div><!--close menubar-->	
-      </nav>
+        <ul id="nav">
+          <li class="current"><a href="index.html">Home</a></li>
+          <li><a href="mywork.html">My Work</a></li>
+          <li><a href="more.html">More</a></li>
+          <li><a href="personal.html">Personal</a></li>
+        </ul>
+      </div><!--close menubar-->	
+    </nav>
     </header>
     
     <div id="slideshow_container">  
-	  <div class="slideshow">
-	    <ul class="slideshow">
+	    <div class="slideshow">
+	      <ul class="slideshow">
           <li class="show"><img width="940" height="250" src="images/home_1.jpg" alt="&quot;Sweet home&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_2.jpg" alt="&quot;happy&quot;" /></li>
+          <li><img width="940" height="250" src="images/home_2.jpg" alt="&quot;Happy&quot;" /></li>
           <li><img width="940" height="250" src="images/home_3.jpg" alt="&quot;Sweet smile&quot;" /></li>
-        </ul> 
-	  </div><!--close slideshow-->  	
-	</div><!--close slideshow_container-->   
+        </ul>
+	    </div><!--close slideshow-->
+	  </div><!--close slideshow_container-->
 	
 	<div id="site_content">
 	  <div id="content">
-        <div class="content_item">
-		      <h1>Welcome To My Website</h1> 
-              <p>I am an experienced programmer who live in Taiwan, learning English and working with open source code as my hobby.</p>
-              <h2>My skills/knowledge:</h2>
-              <p>LLVM backend, compiler, CPU architecture, Verilog, C++, OOP/Design
-                Pattern, OOA/UML tool, Linux device driver, Digital TV software.</p>
-		</div><!--close content_item-->
-      </div><!--close content-->   
+      <div class="content_item">
+	      <h1>Welcome To My Website</h1> 
+            <p>I am an experienced programmer who live in Taiwan, learning English and working with open source code as my hobby.</p>
+          <div class="content_container">       
+		        <h3>My skills/knowledge:</h3>
+		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, OOP/Design
+                    Pattern, OOA/UML tool, Linux device driver, Digital TV software.</p>
+          </div><!--close content_container-->
+
+          <div class="content_container">       
+		        <h3>My hobbies:</h3>
+		        <p>Computer/English study and writing. Tennis, biking, movie</p>
+          </div><!--close content_container-->
+		  </div><!--close content_item-->
+    </div><!--close content-->   
 	</div><!--close site_content-->  	
 
     <footer>
-	  website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
+      website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
     </footer>
 	
   </div><!--close main-->
