--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <div class="content_container">       
 		        <h3>My hobbies:</h3>
-		        <p>Computer/English study and writing. Tennis, biking, movie</p>
+		        <p>Computer/English study and writing. Tennis, biking, movie.</p>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
     </div><!--close content-->   
